# dlogger

./: .gitignore  README.md  README_en.md  pyproject.toml  requirements.txt
dlogger/: __init__.py  logger.py  main.py
dlogger/filters/: __init__.py  keyword.py  level.py  module.py
dlogger/formatters/: __init__.py  exception.py  simple.py
dlogger/handlers/: __init__.py  base.py  compat.py  console.py  file.py
dlogger/integrations/: __init__.py
