[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"


[project]
name = "dlogger-drawiks"
version = "0.3.1"
description = "dlogger by drawiks"
requires-python = ">=3.7"
dependencies = [ "dcolor-drawiks" ]
readme = "README_en.md"


[project.urls]
Homepage = "https://github.com/drawiks/dlogger"


[tool.setuptools.packages.find]
where = [ "." ]
include = [ "dlogger*" ]
